k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gocart
  namespace: gocart

spec:
  replicas: 2

  selector:
    matchLabels:
      app: gocart

  template:
    metadata:
      labels:
        app: gocart

    spec:
      containers:
      - name: gocart

        image: chintanchaudhari/gocart:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 3005

        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"

          limits:
            memory: "512Mi"
            cpu: "500m"

        readinessProbe:
          httpGet:
            path: /
            port: 3005

          initialDelaySeconds: 10
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /
            port: 3005

          initialDelaySeconds: 30
          periodSeconds: 10
