k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gocart-service
  namespace: gocart

spec:
  selector:
    app: gocart

  ports:
  - port: 80
    targetPort: 3005

  type: ClusterIP
