k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: gocart-ingress
  namespace: gocart

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
  - host: gocart.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: gocart-service

            port:
              number: 80
